Update index.html and styles.css with new info

--- a/task-a/styles.css
+++ b/task-a/styles.css
@@ -1,3 +1,8 @@
+/*
+  Author: Chinemerem Adilike
+  Date: 2025-09-21
+  Description: Styles for my classy web page
+*/
 body {
   background-color: #f9f9f9;
   font-family: Arial, sans-serif;
