--- a/task-f/style.css
+++ b/task-f/style.css
@@ -1,6 +1,6 @@
 /*
-Author: Ville Heikkiniemi
-Date: 2025-10-06
+Author: Chinemerem Adilike
+Date: 2025-10-24
 */
 
 /* COLOR GUIDELINES
@@ -234,4 +234,12 @@ body {
   .student-info {
     display: none;
   }
+}
+
+:root {
+  --page-bg: #fcfdfc;
+  --text: #2a2a2a;
+  --brand: #6c4f8d;
+  --table-alt: #f9f5ff;
+  --border: #e0e0e0;
 }
